docs/0.13/_sources/api/gammapy.spectrum.models.PowerLaw.rst.txt
PowerLaw
========

.. currentmodule:: gammapy.spectrum.models

.. autoclass:: PowerLaw
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PowerLaw.amplitude
      ~PowerLaw.index
      ~PowerLaw.parameters
      ~PowerLaw.pivot_energy
      ~PowerLaw.reference

   .. rubric:: Methods Summary

   .. autosummary::

      ~PowerLaw.__call__
      ~PowerLaw.copy
      ~PowerLaw.energy_flux
      ~PowerLaw.energy_flux_error
      ~PowerLaw.evaluate
      ~PowerLaw.evaluate_energy_flux
      ~PowerLaw.evaluate_error
      ~PowerLaw.evaluate_integral
      ~PowerLaw.from_dict
      ~PowerLaw.integral
      ~PowerLaw.integral_error
      ~PowerLaw.inverse
      ~PowerLaw.plot
      ~PowerLaw.plot_error
      ~PowerLaw.spectral_index
      ~PowerLaw.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: index
   .. autoattribute:: parameters
   .. autoattribute:: pivot_energy
   .. autoattribute:: reference

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_energy_flux
   .. automethod:: evaluate_error
   .. automethod:: evaluate_integral
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
